--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "east_text_detector"}]
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
 imutils	= "0.5.4"
-numpy = "1.24"
+numpy = "<1.22,>=1.18"
 opencv-python = "4.7.0.68"
 tensorflow = "2.11.*"
 
