--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ opencv-python = "4.7.0.68"
 tensorflow = "2.11.*"
 
 [tool.poetry.scripts]
-east_text_detector = 'east-text-detector:console:run'
+demo = 'east-text-detector:console:run'
 
 
 [build-system]
