--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ numpy = "<1.22,>=1.18"
 opencv-python = "4.7.0.68"
 tensorflow = "2.11.*"
 
+#[tool.poetry.scripts]
+#demo = 'east_text_detector'
+
 
 [build-system]
 requires = ["poetry-core"]
