Refactored demo.py. Updated README.md. Updated pyproject.toml to run the script directly from console line.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ numpy = "<1.22,>=1.18"
 opencv-python = "4.7.0.68"
 tensorflow = "2.11.*"
 
-#[tool.poetry.scripts]
-#demo = 'east_text_detector'
+[tool.poetry.scripts]
+demo = 'east_text_detector.demo:main'
 
 
 [build-system]
