--- a/.github/workflows/east_text_detecrtor_ci.yml
+++ b/.github/workflows/east_text_detecrtor_ci.yml
@@ -25,7 +25,8 @@ jobs:
         python-version: "3.9"
         
     - name: Install Poetry
-      uses: dschep/install-poetry-action@v1.2
+      run: |
+          pipx install poetry==1.2.0
     
     - name: Install dependencies
       run: |
