--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,10 +38,10 @@ imutils = "0.5.4"
 numpy = "<1.22,>=1.18"
 opencv-python = "4.7.0.68"
 tensorflow = "2.11.*"
-pytest = "~6.0.0"
+
 
 [tool.poetry.group.test.dependencies]
-pytest = "^6.0.0"
+pytest = "6.2.5"
 pytest-mock = "*"
 numpy = "<1.22,>=1.18"
 
