--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ exclude = '''
 
 [tool.flake8]
 ignore = ['I101', 'I201', 'F401', 'F403', 'S001', 'D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D106', 'D107', 'D200', 'D205', 'D400', 'W504', 'D202', 'E203', 'E722', 'W503', 'B006']
-exclude = ['.tox', '__pycache__', '.git', 'build', 'dist', '.venv', '.tfile', '.mp4']
+exclude = ['.tox', '__pycache__', '.git', 'build', 'dist', './.venv', '.tfile', '.mp4']
 max-line-length = 120
 count = true
 
@@ -38,10 +38,9 @@ imutils = "0.5.4"
 numpy = "<1.22,>=1.18"
 opencv-python = "4.7.0.68"
 tensorflow = "2.11.*"
-pytest = "~6.0.0"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^6.0.0"
+pytest = "6.2.5"
 pytest-mock = "*"
 numpy = "<1.22,>=1.18"
 
