--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,12 @@ max-line-length = 120
 count = true
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
+python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
 imutils = "0.5.4"
 numpy = "<1.22,>=1.18"
 opencv-python = "4.7.0.68"
 tensorflow = "2.11.*"
+streamlit  = "1.20.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "6.2.5"
